[package]
name = "address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geocoding = { version = "0.4.0", default-features = false, features = ["rustls-tls"] }
geojson = { version = "0.24.0", features = ["geo-types"] }
geo = "0.23.0"
geo-types = "0.7.7"
csv = "1.1"
serde = { version = "1", features = ["derive"] }

