[package]
name = "address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geocoding = { version = "0.4.0", default-features = false, features = ["rustls-tls"] }
geojson = { version = "0.24.0", features = ["geo-types"] }
geo = "0.23.0"
geo-types = "0.7.7"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
regex = "1"
diacritics = "0.1.3"
ngrammatic = "0.4.0"
rust-fuzzy-search = "0.1.1"
rmp-serde = "1.1.1"
bincode = "1.3.3"
lazy_static = "1.4.0"

